2010-10-06  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13650: Information disclosure in sys_actions (DB mount, usergroups) (thanks to Georg Ringer)

2010-09-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #5983: Undefined variable is used in t3lib_BEfunc::exec_foreign_table_where_query

2010-09-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15653: Only show upload comments that are newer than installed version in update function of EM

2010-09-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8260: Update Wizard in install tool force temp-configuration files and load configuration twice

2010-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #3908: DisplayCond => VERSION:IS:false always returns true (Thanks to Daniel Poetzinger)

2010-08-12  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #3819: t3lib_div::getIndpEnv('TYPO3_DOCUMENT_ROOT') delivers wrong value in Backend

2010-08-06  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.14

2010-08-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15280: felogin redirect doesn't work anymore after update to latest releases (4.2x - 4.4.x) (thanks to Helmut Hummel)
	* Fixed bug #15282: It is impossible to set links to files any more with the link wizard

2010-08-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15265: InstallTool-login not possible after Update to 4.4.1 due to session_start() in extensions (thanks to Ernesto Baschny and Helmut Hummel)

2010-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15289: Element-Browser page tree has HSC'ed <span> elements

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.2.13

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14978: XSS in file tree (thanks to Georg Ringer)
	* Fixed bug #13292: TYPO3 error message reveals path to web root (thanks to Xavier Perseguers)
	* Fixed bug #11618: XSS vulnerability in install tool / BE login (thanks to Georg Ringer)